# python-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: docker.yml  integration-tests.yml  pre-commit.yml  unit-tests.yml
config/: config.dev.toml
src/: logger.py  logging_setup.py  main.py  settings.py
tests/integration/: test_find_first_toml.py  test_nothing.py
tests/unit/: test_add.py
