[project]
name = "python-template"
version = "0.1.0"
description = "A boilerplate template to kickstart new Python projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "absolufy-imports>=0.3.1",
    "codespell>=2.4.1",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]
